package com.gymRagnarok.domain;
public enum Permission {
    CREATE,
    READ,
    UPDATE,
    DELETE,
    VIEW_REPORTS,
    PROCESS_SALES
}

