package com.gymRagnarok.finanzas.domain;

public enum Pay {
	 EFECTIVO,
	 TRANSACCION,
	 TARJETA_DEBITO,   
	 TARJETA_CREDITO
}
