package com.gymRagnarok.products.domain;


/**
 * Enumeración que define los tipos de membresía disponibles.
 */


public enum TypeMembership {
    MENSUAL,
    TRIMESTRAL,
    SEMESTRAL,
    ANUAL
}